[package]
name = "cairo_python_bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-compiler = { path = "../cairo-compiler" }
cairo-runner = { path = "../cairo-runner" }
cairo-sierra-to-casm = { path = "../cairo-sierra-to-casm" }

[lib]
name = "cairo_python_bindings"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]
